[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/BaseButtonFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://HUD/BaseButton.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Bob"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Press"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="BaseButton" type="Button"]
margin_left = -54.0
margin_top = -19.0
margin_right = 54.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 55, 19 )
custom_fonts/font = ExtResource( 1 )
text = "Asss"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bob = SubResource( 1 )
anims/Press = SubResource( 2 )

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]

[node name="FailSound" type="AudioStreamPlayer2D" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_BaseButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BaseButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_BaseButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
